# gfastaml

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  types.rs
src/conversions/: fasta_to_gfa.rs  fasta_to_graphml.rs  gfa_to_graphml.rs  mod.rs
src/formats/: fasta.rs  gfa.rs  graphml.rs  mod.rs
src/formats/gfa/: mod.rs  parse.rs
src/parse/: gfa.rs
src/write/: graphml.rs
tests/data/: basic.gfa  basic.graphml  test.fasta
